mitre/internal/postgres/network-ingress/cnp-postgres-network-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-postgresql-port"
spec:
  description: "This will block postgresql external access"
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromCIDR:
        {}
      toPorts:
      - ports:
        - port: "5432"
          protocol: ANY
